--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --allow-env --allow-read --allow-net --allow-run app.ts"
+    "dev": "deno run --allow-env --allow-read --allow-net --allow-run app.ts",
+    "compile" : "deno compile --allow-env --allow-read --allow-net --allow-run app.ts"
   }
 }
